@@ -24,6 +24,7 @@ SubVersion: $Id$
 	- [roms]  $2826: added i18n support to some strings
 	- [roms]  $2827: fixed "libticables2 access violation" which appears when changing the link cable under some circumstances; due to
 		random access on uninitialized dbus function pointers
+	- [roms]  $2832: don't allow launching of debugger if preloading has not finished yet
 
 - 16/09/2007, version 3.02:
 	- [roms]  $2646: screenshots can be copied into the clipboard
